--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "author": "Gerardo Miranda <gerardodev25@gmail.com> (https://github.com/GerardoDev25)",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.2.1",
-    "graphql-tools": "^4.0.4"
+    "graphql-tools": "^4.0.4",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
